Fix typo and add comments

--- a/docs/diagrams/d2.md
+++ b/docs/diagrams/d2.md
@@ -1,7 +1,7 @@
 # D2
 
 !!! warning
-    PDF rendering will fail with WeasyPrint.
+    PDF rendering will fail with WeasyPrint. However, it will succeed with Playwright/Chromium.
 
 ```d2 height=500
 D2 Parser: {
